mdapi/Custom/objects/Prospect__c.object
<CustomObject>
    <description>This is part of the Acquisitions deployment and is the &quot;entry point&quot; for all records from brokers or AZ bidder.</description>
    <fields>
        <fullName>AC_or_Evap__c</fullName>
        <label>AC or Evap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>Evap</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APN_Search__c</fullName>
        <label>APN Search</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APN_Unique__c</fullName>
        <label>APN Unique</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APN__c</fullName>
        <description>Assessor&apos;s Parcel Number</description>
        <inlineHelpText>Assessor&apos;s Parcel Number</inlineHelpText>
        <label>APN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Back_Taxes_Due__c</fullName>
        <formula>AZB_Update__r.AZB_Back_Taxes_Due__c</formula>
        <label>AZB Back Taxes Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Bid_Status__c</fullName>
        <formula>TEXT(AZB_Update__r.AZB_Bid_Status__c)</formula>
        <label>AZB Bid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Bid_Type__c</fullName>
        <formula>AZB_Update__r.AZB_Bid_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AZB Bid Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Drive_Report_Notes__c</fullName>
        <label>AZB Drive Report Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AZB_ID__c</fullName>
        <formula>AZB_Update__r.AZB_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AZB ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_IH_Original_Bid_Max__c</fullName>
        <formula>AZB_Update__r.AZB_IH_Original_Bid_Max__c</formula>
        <label>AZB IH Original Bid Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Occupied_Status__c</fullName>
        <formula>AZB_Update__r.AZB_Occupied_Status__c</formula>
        <label>AZB Occupied Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Open_Bid__c</fullName>
        <formula>AZB_Update__r.AZB_Open_Bid__c</formula>
        <label>AZB Open Bid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Place__c</fullName>
        <formula>AZB_Update__r.AZB_Place__c</formula>
        <label>AZB Place</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Assessor_Value__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Assessor_Value__c</formula>
        <label>AZB Property Assessor Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Est_Value__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Est_Value__c</formula>
        <label>AZB Property Est Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Levels__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Levels__c</formula>
        <label>AZB Property Levels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Pool__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Pool__c</formula>
        <label>AZB Property Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Subdivision__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Subdivision__c</formula>
        <label>AZB Property Subdivision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Use_Code__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Use_Code__c</formula>
        <label>AZB Property Use Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Deposit_Pmt__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Deposit_Pmt__c</formula>
        <label>AZB Trustee Deposit Pmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Number__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Number__c</formula>
        <label>AZB Trustee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Sale_Date__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Sale_Date__c</formula>
        <label>AZB Trustee Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Sale_Time__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Sale_Time__c</formula>
        <label>AZB Trustee Sale Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Underwriting_Notes__c</fullName>
        <label>AZB Underwriting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AZB_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AZB Update</label>
        <referenceTo>AZB_Update__c</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AZB_User_Email__c</fullName>
        <formula>AZB_Update__r.AZB_User_Email__c</formula>
        <label>AZB User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_User_ID__c</fullName>
        <formula>AZB_Update__r.AZB_User_ID__c</formula>
        <label>AZB User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_User__c</fullName>
        <formula>AZB_Update__r.AZB_User__c</formula>
        <label>AZB User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisition_Basis_Est_UW__c</fullName>
        <formula>IF( 
AND( 
ISNULL(Broker_Expense_Est_UW__c), 
ISNULL(Closing_Price__c), 
ISNULL(Rehab_Budget_Est_UW__c), 
ISNULL(Back_Taxes_Est_UW__c), 
ISNULL(Liens_Fines_Est_UW__c) 
), 
null, 
( 
IF(Broker_Expense_Est_UW__c &gt; 0, Broker_Expense_Est_UW__c, 0) 
+ 
IF(Closing_Price__c&gt; 0, Closing_Price__c, 0) 
+ 
IF(Rehab_Budget_Est_UW__c &gt; 0, Rehab_Budget_Est_UW__c, 0) + 
+ 
IF(Back_Taxes_Est_UW__c&gt; 0, Back_Taxes_Est_UW__c, 0) + 
+ 
IF(Liens_Fines_Est_UW__c &gt; 0, Liens_Fines_Est_UW__c, 0) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Basis Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Basis_PSF_Est_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
Acquisition_Basis_Est_UW__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Basis PSF Est @ UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Overhead__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Therefore, the value in this field was changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)), 
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
*0.0000, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Overhead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_Discount_to_Max_Bid__c</fullName>
        <formula>IF(Max_Bid_Price__c &gt; 0,	1-(Closing_Price__c/Max_Bid_Price__c),	null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price Discount to Max Bid</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_PSF__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
  Closing_Price__c /Square_Feet__c,
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_prct_Market_Value_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0,
Closing_Price__c/ Market_Value_UW__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price as % Market Value@UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acquisitions_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisitions Analyst</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>User.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis Manager</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospect_Acquisitions_Analysts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisitions_Team_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisitions Team Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis Manager</value>
            </filterItems>
            <filterItems>
                <field>$Source.Region__c</field>
                <operation>equals</operation>
                <valueField>User.Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Unit__c</fullName>
        <label>Unit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated_City__c</fullName>
        <label>Address Validated City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated_County__c</fullName>
        <label>Address Validated County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated_Last_Attempt__c</fullName>
        <label>Address Validated Last Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_Validated_State__c</fullName>
        <label>Address Validated State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated_Street__c</fullName>
        <label>Address Validated Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated_Successfully__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated Successfully</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Validated_Zip__c</fullName>
        <label>Address Validated Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Message__c</fullName>
        <label>Address Validation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_MKT_UW__c</fullName>
        <formula>IF(Market_Value_UW__c&gt; 0,
All_In_Cost_Est_UW__c / Market_Value_UW__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption % MKT @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_prcnt_peak_UW__c</fullName>
        <formula>IF(Previous_High_Value__c &gt; 0,
All_In_Cost_Est_UW__c /Previous_High_Value__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption @ % of peak</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_replace_UW__c</fullName>
        <formula>IF(Replacement_Cost_Est_UW_OLD__c &gt; 0,
All_In_Cost_Est_UW__c / Replacement_Cost_Est_UW_OLD__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption @ UW Replace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Est_UW__c</fullName>
        <label>All-In Cost Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_PSF_Est_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
All_In_Cost_Est_UW__c/ Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost PSF Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amortization_Years__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amortization (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Acquisition_All_In_Basis__c</fullName>
        <label>B Acquisition All-In Basis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Acquisition_All_in_Basis_PSF__c</fullName>
        <label>B Acquisition All-In Basis PSF</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_All_In_Perc_Market_Value__c</fullName>
        <label>B All-in % Market Value</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Back_Taxes_Est__c</fullName>
        <label>B Back Taxes Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Bid_Type__c</fullName>
        <label>B Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REO</fullName>
                </value>
                <value>
                    <fullName>Short Sale</fullName>
                </value>
                <value>
                    <fullName>Off Market</fullName>
                </value>
                <value>
                    <fullName>Retail Auction</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Investor</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Homeowner</fullName>
                </value>
                <value>
                    <fullName>Standard Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Comments__c</fullName>
        <inlineHelpText>Comments entered here will be sent to the Agent working on this property.  Enter your comments at the bottom.  Before entering your comments, enter the date, time and your name in the following format:

[YYYY/MM/DD, HH:MM - YOUR NAME]</inlineHelpText>
        <label>B Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B_Gross_Yield__c</fullName>
        <inlineHelpText>This field is automatically updated to reflect the calculation on the Brokersite tab.  If the value is incorrect, open the property using the Brokersite tab, make the necessary edits, save, and return to the Salesforce Prospect to see the new value.</inlineHelpText>
        <label>B Gross Yield</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_HOA_DUES__c</fullName>
        <inlineHelpText>This value should be entered using the Brokersite tab. The &quot;B Gross Yield&quot; formula, which looks at this value, only calculates on the Brokersite tab. Enter this value on the Prospect tab only if the property can&apos;t be found on the Brokersite tab.</inlineHelpText>
        <label>B HOA Dues/CDD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Home_Insurance__c</fullName>
        <label>B Home Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_IH_Point_of_Contact__c</fullName>
        <label>B IH Point of Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Market_Value_Est__c</fullName>
        <label>B Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Market_Value_PSF__c</fullName>
        <label>B Market Value PSF</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Monthly_Rent_Est__c</fullName>
        <label>B Monthly Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Occupancy_Status__c</fullName>
        <label>B Occupancy Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Occupied</fullName>
                </value>
                <value>
                    <fullName>Purchased Rented</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Other_Closing_Costs_Est__c</fullName>
        <label>B Other Closing Costs ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Peak_Value_PSF__c</fullName>
        <label>B Peak Value PSF</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Previous_High_Date__c</fullName>
        <label>B Previous High Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Previous_High_Value__c</fullName>
        <label>B Previous High Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Property_Access__c</fullName>
        <label>B How to access Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B_Property_Description__c</fullName>
        <label>B Property Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B_Property_Tax_Perc__c</fullName>
        <label>B Property Tax %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Rehab_Est__c</fullName>
        <label>B Rehab</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Replacement_Cost_PSF__c</fullName>
        <label>B Replacement Cost PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Special_Assessments__c</fullName>
        <label>B Special Assessment / Utility Bond</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Status__c</fullName>
        <label>Agent to IH Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under Initial Review</fullName>
                    <default>true</default>
                    <label>Under Initial Review</label>
                </value>
                <value>
                    <fullName>Ready for Underwriting Review</fullName>
                </value>
                <value>
                    <fullName>Offer Submitted to Homeowner</fullName>
                </value>
                <value>
                    <fullName>Requires IH Action - Review Correspondence</fullName>
                </value>
                <value>
                    <fullName>Review Counter Offer</fullName>
                </value>
                <value>
                    <fullName>Review Updated Offer Amount</fullName>
                </value>
                <value>
                    <fullName>Additional Signatures Needed</fullName>
                </value>
                <value>
                    <fullName>Review Home Inspection</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted by Seller</fullName>
                </value>
                <value>
                    <fullName>Transaction Cancelled</fullName>
                </value>
                <value>
                    <fullName>In Escrow</fullName>
                </value>
                <value>
                    <fullName>Converted to Pipeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B_Title_Company__c</fullName>
        <label>B Title Company</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Title_Policy_Est__c</fullName>
        <label>B Title Policy($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Title_Underwriter__c</fullName>
        <label>B Title Underwriter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Taxes_Est_UW__c</fullName>
        <defaultValue>IF( 
	OR(
		$RecordType.Name = &apos;BrokerSite&apos;,
		$RecordType.Name = &apos;Standard/REO Acquisition&apos;
	),
	0,
	null
)</defaultValue>
        <label>*Back Taxes Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baths__c</fullName>
        <label>*Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>*Bedrooms</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Expense_Est_UW__c</fullName>
        <formula>Bid_Service_Expense__c</formula>
        <label>Bid Service Expense Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Expense__c</fullName>
        <label>*Bid Service (Expense)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Service</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect (Bid Service)</relationshipLabel>
        <relationshipName>BidServiceProspects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Type_Sub__c</fullName>
        <label>Bid Type Sub</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bid_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Sale - Homeowner</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Investor</fullName>
                </value>
                <value>
                    <fullName>Retail Auction</fullName>
                </value>
                <value>
                    <fullName>Off Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <label>*Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Bulk Sale</fullName>
                </value>
                <value>
                    <fullName>REO</fullName>
                </value>
                <value>
                    <fullName>Short Sale</fullName>
                </value>
                <value>
                    <fullName>Off Market</fullName>
                </value>
                <value>
                    <fullName>Retail Auction</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Investor</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Homeowner</fullName>
                </value>
                <value>
                    <fullName>Standard Sale</fullName>
                </value>
                <value>
                    <fullName>New Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <label>Box Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bridge_Cost_during_Rehab_and_Lease_up__c</fullName>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)), 
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
*0, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bridge Cost during Rehab and Lease up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Expense_Est_UW__c</fullName>
        <defaultValue>IF(
OR(
$RecordType.Name = &apos;BrokerSite&apos;
),
0,
null
)</defaultValue>
        <label>Broker Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Point_of_Contact__c</fullName>
        <label>IH Point of Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_SF_com_Record_ID__c</fullName>
        <formula>Brokerage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker SF.com Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospects Related to this Broker</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Walk_Status__c</fullName>
        <formula>IF( OR( ISNULL(HD_Budget_Walk__c), ISBLANK(TRIM(HD_Budget_Walk__c)) ), &apos;&apos;, HD_Budget_Walk__r.Budget_Status__c)</formula>
        <label>Budget Walk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Deal_Ranking__c</fullName>
        <inlineHelpText>&quot;1&quot; means the property fits current Bulk Deal acquisition criteria; &quot;2&quot; means it does not meet current criteria but it is manageable; &quot;3&quot; means the property will be sold after purchase.</inlineHelpText>
        <label>Bulk Deal Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Deal_Text__c</fullName>
        <formula>Bulk_Deal__r.Name</formula>
        <label>Bulk Deal Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Deal</label>
        <referenceTo>Bulk_Sale__c</referenceTo>
        <relationshipLabel>Prospect Records</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Portfolio_ID__c</fullName>
        <label>Bulk Portfolio ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Portfolio_Prop_Count__c</fullName>
        <label>Bulk Portfolio Prop Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Seller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect (Bulk Seller)</relationshipLabel>
        <relationshipName>Prospect_Bulk_Seller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFK_Est_UW__c</fullName>
        <defaultValue>IF(
OR(
$RecordType.Name = &apos;BrokerSite&apos;,
$RecordType.Name = &apos;Trustee Acquisition&apos;
),
0,
null
)</defaultValue>
        <label>*CFK Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closing_Price__c</fullName>
        <formula>Contract_Price__c + Credits_at_Close__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comps__c</fullName>
        <label>Comps</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_of_Roof__c</fullName>
        <label>Condition of Roof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Age__c</fullName>
        <formula>TODAY() -  Contract_Date__c</formula>
        <label>Contract Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <label>*Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>